--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -157,6 +157,6 @@ l_english:
  cot_a25_valour:0 "Arca Valtre"
  cot_a25_telgeir:0 "Arca Telgeir"
  cot_a25_logistics:0 "Joint Base Aaramar Derwick Logistical Hub"
- 
+ cot_c01_skalds:0 "Skalds of the New World"
  wos_A29_naras_tithe:0 "Colonial Protection Tithe"
  wos_A29_naras_tithe_colony "will anyone even read this?"
