--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -122,3 +122,5 @@
   cot_camir_new_girl_desc:0 "Restore Queen Consort"
   cot_camir_title:0 "Restore Camir's name"
   cot_camir_desc:0 "Restore Camir's name"
+  
+  merc_comp_of_trym:0 "The Company of Trym"
