ERRATIC COURT FINISHED

--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -129,3 +129,13 @@
  GHULLE_STRING_ADJ:0 "Ghúllen"
  REV_GHULLE_STRING:0 "Revolutionary Ghúlle"
  REV_GHULLE_STRING_ADJ:0 "Ghúllen"
+
+ ANBENNLEINN_STRING:0 "Anbennleínn"
+ ANBENNLEINN_STRING_ADJ:0 "Anbennleínn"
+ REV_ANBENNLEINN_STRING:0 "Revolutionary Anbennleínn"
+ REV_ANBENNLEINN_STRING:0 "Anbennleínn"
+
+ OVERCLAN_STRING:0 "Overclan"
+ OVERCLAN_STRING_ADJ:0 "Overclan"
+ REV_OVERCLAN_STRING:0 "Revolutionary Overclan"
+ REV_OVERCLAN_STRING:0 "Overclan"
