Can someone explain to me why the loc doesn't work for aeric's modifer

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  CoT_i_events.1:0 "Heir Improvement, step one of two."
  CoT_i_events.1.t:0 "Heir Improvement, step one of two."
  CoT_i_events.1.d:0 "Our family takes care of the education of our young scions, and our prime heir had just turned adult, the fruits of our labour are showing, they will surely be a competent monarch."
@@ -160,3 +160,4 @@ l_english:
  cot_c01_skalds:0 "Skalds of the New World"
  wos_A29_naras_tithe:0 "Colonial Protection Tithe"
  wos_A29_naras_tithe_colony "will anyone even read this?"
+ wos_A38_purged_corruption:0 "Purge of 1540"
