--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -1,4 +1,4 @@
-Ôªøl_english:
+l_english:
  CoT_i_events.1:0 "Heir Improvement, step one of two."
  CoT_i_events.1.t:0 "Heir Improvement, step one of two."
  CoT_i_events.1.d:0 "Our family takes care of the education of our young scions, and our prime heir had just turned adult, the fruits of our labour are showing, they will surely be a competent monarch."
@@ -29,7 +29,7 @@
 
  cot_ideas_upgrade.5.t:0 "More than just the city"
  cot_ideas_upgrade.5.d:0 "TODO"
- CoT_ideagroups.5.a:0 "Not just AnbenncÔøΩst"
+ CoT_ideagroups.5.a:0 "Not just Anbenncùst"
 
  cot_ideas_upgrade.6.t:0 "Future of Havoral"
  cot_ideas_upgrade.6.d:0 "TODO"
@@ -132,7 +132,7 @@
 
  #Alltide Week 2 - 3
  s77_averted_hunger_crisis:0 "Averted Hunger Crisis"
- g90_tearfallfest:0 "TrÔøΩnefallenfest"
+ g90_tearfallfest:0 "Trùnefallenfest"
  w25_cannon_diplomacy:0 "Cannon Diplomacy"
  cot_h87_strong:0 "Strong King"
  cot_F71_amsisi_peace:0 "Amsisi Peace"
