Added Orc modierfs

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -161,3 +161,7 @@ l_english:
  wos_A29_naras_tithe:0 "Colonial Protection Tithe"
  wos_A29_naras_tithe_colony "will anyone even read this?"
  wos_A38_purged_corruption:0 "Purge of 1540"
+ wos_modern_orcs_adm_I:0 "Modern Orcs Administrative"
+ wos_modern_orcs_dip_I:0 "Modern Orcs Diplomacy"
+ wos_modern_orcs_mil_I:0 "Modern Orcs Military"
+ 
