idea bump decision

--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -127,3 +127,17 @@
 
   wos_recruit_planetouched_general_title:0 "Recruit Plaintouched General"
   wos_recruit_planetouched_general_desc:0 "Can only be taken once every twenty years"
+  
+  wos_vaass_manual_bump_ideas_title:0 "Manual Idea Bumping"
+  wos_vaass_manual_bump_ideas_desc: "Click to Stop Yappers"
+  cot_ideas_upgrade.100.t:0 "Manual Idea Bump"
+  cot_ideas_upgrade.100.d:0 "They're in the VC, complaining right now"
+  decision_bump_vaegheim:0 "Vaegheim"
+  decision_bump_kyrzzaar:0 "Kyrzzaar"
+  decision_bump_khozrugan:0 "Khozrugan"
+  decision_bump_unguldavor:0 "Ungldavor"
+  decision_bump_deadfang:0 "Deadfang"
+  decision_bump_baramund:0 "Baramund was Actually Formed?!"
+  decision_bump_meradzor:0 "Meradzor"
+  decision_bump_ibevar:0 "Ibevar"
+  name = decision_bump_nobody:0 "I'm a big silly person and I misclicked on the decision"
