I shouldn't copy and paste so much

--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -140,4 +140,4 @@
   decision_bump_baramund:0 "Baramund was Actually Formed?!"
   decision_bump_meradzor:0 "Meradzor"
   decision_bump_ibevar:0 "Ibevar"
-  name = decision_bump_nobody:0 "I'm a big silly person and I misclicked on the decision"
+  decision_bump_nobody:0 "I'm a big silly person and I misclicked on the decision"
