--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -29,7 +29,7 @@ l_english:
 
  cot_ideas_upgrade.5.t:0 "More than just the city"
  cot_ideas_upgrade.5.d:0 "TODO"
- CoT_ideagroups.5.a:0 "Not just Anbenncùst"
+ CoT_ideagroups.5.a:0 "Not just AnbenncÔøΩst"
 
  cot_ideas_upgrade.6.t:0 "Future of Havoral"
  cot_ideas_upgrade.6.d:0 "TODO"
@@ -132,7 +132,7 @@ l_english:
 
  #Alltide Week 2 - 3
  s77_averted_hunger_crisis:0 "Averted Hunger Crisis"
- g90_tearfallfest:0 "Trùnefallenfest"
+ g90_tearfallfest:0 "TrÔøΩnefallenfest"
  w25_cannon_diplomacy:0 "Cannon Diplomacy"
  cot_h87_strong:0 "Strong King"
  cot_F71_amsisi_peace:0 "Amsisi Peace"
@@ -164,4 +164,4 @@ l_english:
  wos_modern_orcs_adm_I:0 "Modern Orcs Administrative"
  wos_modern_orcs_dip_I:0 "Modern Orcs Diplomacy"
  wos_modern_orcs_mil_I:0 "Modern Orcs Military"
- 
+ wos_urulokis_rule:0 "Urul√≥ki's Rule"
