--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -141,3 +141,14 @@
   decision_bump_meradzor:0 "Meradzor"
   decision_bump_ibevar:0 "Ibevar"
   decision_bump_nobody:0 "I'm a big silly person and I misclicked on the decision"
+
+  cot_rp_events.7.t:0 "Stirrings in the Deep"
+  cot_rp_events.7.d:0 "with Thyrazyn's death, Urulóki has decided to assume full control over his new kingdom"
+  cot_rp_events.7.a:0 "We are prepared this time...right?"
+
+  wos_kobolds_with_a_dragon_demand:0 "Bring forth the dragon's rule"
+  wos_kobolds_with_a_dragon_demand_desc:0 "DRAGONS!"
+  wos_kobolds_with_a_dragon_title:0 "Draconic"
+  wos_kobolds_with_a_dragon_name:0 "Kobold Rabble"
+  wos_kobolds_with_a_dragon_desc:0 "Kobold rabble...but they follow a dragon"
+  wos_kobolds_with_a_dragon_army:0 "Draconic Servants"
