can't be bothered to figure out reforms work

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -165,3 +165,4 @@ l_english:
  wos_modern_orcs_dip_I:0 "Modern Orcs Diplomacy"
  wos_modern_orcs_mil_I:0 "Modern Orcs Military"
  wos_urulokis_rule:0 "Urulóki's Rule"
+ wos_I34_twilight_realm:0 "Twilight realm"
