--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -145,10 +145,13 @@
   cot_rp_events.7.t:0 "Stirrings in the Deep"
   cot_rp_events.7.d:0 "with Thyrazyn's death, Urulóki has decided to assume full control over his new kingdom"
   cot_rp_events.7.a:0 "We are prepared this time...right?"
+  cot_rp_events.8.t:0 "Victory"
+  cot_rp_events.8.d:0 "its almost 1am pretend I'm good at writing"
+  cot_rp_events.8.a:0 "Have a nice reward for your effort"
 
-  wos_kobolds_with_a_dragon_demand:0 "Bring forth the dragon's rule"
-  wos_kobolds_with_a_dragon_demand_desc:0 "DRAGONS!"
-  wos_kobolds_with_a_dragon_title:0 "Draconic"
-  wos_kobolds_with_a_dragon_name:0 "Kobold Rabble"
-  wos_kobolds_with_a_dragon_desc:0 "Kobold rabble...but they follow a dragon"
-  wos_kobolds_with_a_dragon_army:0 "Draconic Servants"
+  wos_kobolds_with_a_dragon_rebels_demand:0 "Bring forth the dragon's rule"
+  wos_kobolds_with_a_dragon_rebels_demand_desc:0 "DRAGONS!"
+  wos_kobolds_with_a_dragon_rebels_title:0 "Draconic"
+  wos_kobolds_with_a_dragon_rebels_name:0 "Kobold Rabble"
+  wos_kobolds_with_a_dragon_rebels_desc:0 "Kobold rabble...but they follow a dragon"
+  wos_kobolds_with_a_dragon_rebels_army:0 "Draconic Servants"
