More Sensible Gnoll Gov'ts

--- a/localisation/CoT_gov_reforms_l_english.yml
+++ b/localisation/CoT_gov_reforms_l_english.yml
@@ -12,3 +12,9 @@
  
  greentide_cot_provcost_modifier:0 "Shadow of Dookansfall" #moved from gov't to a modifier
  greentide_cot_provcost_modifier_desc:0 "Rumors and signs abound that Dookanson has fallen. It weighs heavy upon the clans, and has brought about infighting and struggles for power not seen in decades, limiting our capacity to expand."
+ 
+ cot_lightbringer_pack:0 "Lightbringer Pack"
+ cot_lightbringer_pack_desc:0 "Our pack has long embraced it's duty to the righteous truth, and all foe shall tremble before us."
+ 
+ cot_darkswarm_pack:0 "Darkswarm Pack"
+ cot_darkswarm_pack_desc:0 "Other packs have died or embrace a shambled mockery of peacefulness, or bind themselves to their so-called truths. We are that which they fear. We are that which they run from and tell their whelps to hide like cowards lest we descend upon them."
