--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -155,3 +155,20 @@
   wos_kobolds_with_a_dragon_rebels_name:0 "Kobold Rabble"
   wos_kobolds_with_a_dragon_rebels_desc:0 "Kobold rabble...but they follow a dragon"
   wos_kobolds_with_a_dragon_rebels_army:0 "Draconic Servants"
+  #orcsfury week 2
+  waaagh_decision_title:0 "Lanch Orcsfury"
+  waaagh_decision_desc:0 "Lanches Orcsfury"
+  orc_W_decision_title:0 "Orcish Victory"
+  orc_W_decision_desc:0 "Click me to save Cannor from the evil Cannorians"
+  human_W_decision_title:0 "Human Victory"
+  human_W_decision_desc:0 "Click me to save Escann from the evil Orcs"
+  wave_two_humans_decision_title:0 "Bring in Lorent"
+  wave_two_humans_decision_desc:0 "Brings in Lorent"
+  wave_two_greenskins_decision_title:0 "Bring in Mountainshark"
+  wave_two_greenskins_decision_desc:0 "Brings in Mountainshark"
+  human_exwes_decision_title:0 "Bring in Exwes"
+  human_exwes_decision_desc:0 "Exwes has a player"
+  human_busilar_decision_title:0 "Bring in Busilar"
+  human_busilar_decision_desc:0 "Busilar has a player"
+  lorent_won_without_me_decision_title:0 "Click me if the humans won before you joined"
+  lorent_won_without_me_decision_desc:0 "Removes the mana you get when you win. With great power comes great responsibility"
