Escanni slave humans

--- a/localisation/anb_cultures_l_english.yml
+++ b/localisation/anb_cultures_l_english.yml
@@ -77,6 +77,9 @@
  white_reachman:0 "White Reachman"
  moredhalic:0 "Moredhalic"
  rugani:0 "Rugani"
+ davorian:0 "Davorian"
+ meradian:0 "Meradian"
+ barumandi:0 "Barumandi"
  black_demesner:0 "Black Demesner"
  lencori:0 "Lencori"
  high_lorentish:0 "High Lorentish"
