--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -143,7 +143,7 @@
   decision_bump_nobody:0 "I'm a big silly person and I misclicked on the decision"
 
   cot_rp_events.7.t:0 "Stirrings in the Deep"
-  cot_rp_events.7.d:0 "with Thyrazyn's death, Urulóki has decided to assume full control over his new kingdom"
+  cot_rp_events.7.d:0 "with Thyrazyn's death, Urulï¿½ki has decided to assume full control over his new kingdom"
   cot_rp_events.7.a:0 "We are prepared this time...right?"
   cot_rp_events.8.t:0 "Victory"
   cot_rp_events.8.d:0 "its almost 1am pretend I'm good at writing"
@@ -156,8 +156,8 @@
   wos_kobolds_with_a_dragon_rebels_desc:0 "Kobold rabble...but they follow a dragon"
   wos_kobolds_with_a_dragon_rebels_army:0 "Draconic Servants"
   #orcsfury week 2
-  waaagh_decision_title:0 "Lanch Orcsfury"
-  waaagh_decision_desc:0 "Lanches Orcsfury"
+  waaagh_decision_title:0 "Launch Orcsfury"
+  waaagh_decision_desc:0 "Launches Orcsfury"
   orc_W_decision_title:0 "Orcish Victory"
   orc_W_decision_desc:0 "Click me to save Cannor from the evil Cannorians"
   human_W_decision_title:0 "Human Victory"
