--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  CoT_i_events.1:0 "Heir Improvement, step one of two."
  CoT_i_events.1.t:0 "Heir Improvement, step one of two."
  CoT_i_events.1.d:0 "Our family takes care of the education of our young scions, and our prime heir had just turned adult, the fruits of our labour are showing, they will surely be a competent monarch."
