lorent event rewards

--- a/localisation/CoT_gov_reforms_l_english.yml
+++ b/localisation/CoT_gov_reforms_l_english.yml
@@ -18,3 +18,9 @@
  
  cot_darkswarm_pack:0 "Darkswarm Pack"
  cot_darkswarm_pack_desc:0 "Other packs have died or embrace a shambled mockery of peacefulness, or bind themselves to their so-called truths. We are that which they fear. We are that which they run from and tell their whelps to hide like cowards lest we descend upon them."
+
+ cot_A01_rose_autocracy:0 "Rose Autocracy"
+ cot_A01_rose_autocracy_desc:0 "OUR GLORIOUS EMPEROR DOES NOT CARE ABOUT NO WINE LORDS"
+
+ cot_A01_lencori_war_nobility:0 "Lencori War Nobility"
+ cot_A01_lencori_war_nobility_desc:0 "War Nobility ftw"
