--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -139,3 +139,8 @@
  OVERCLAN_STRING_ADJ:0 "Overclan"
  REV_OVERCLAN_STRING:0 "Revolutionary Overclan"
  REV_OVERCLAN_STRING:0 "Overclan"
+
+ LENCENOR_STRING:0 "Lencenor"
+ LENCENOR_STRING_ADJ:0 "Lencori"
+ REV_LENCENOR_STRING:0 "Lencenor"
+ REV_LENCENOR_STRING:0 "Lencenor"
