--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -166,3 +166,7 @@
  wos_modern_orcs_mil_I:0 "Modern Orcs Military"
  wos_urulokis_rule:0 "Urulóki's Rule"
  wos_I34_twilight_realm:0 "Twilight realm"
+
+#Alltide Weak 3 - 4
+ cot_A01_new_administration:0 "New Administration"
+ cot_A01_claires_failure:0 "'Claires' Failure"
