Can send gifts to ai

--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -95,6 +95,8 @@
  cot_waning_power_info_decision_title:0 "WANING POWER: You cost 6 ass points to ally"
  cot_great_power_info_decision_title:0 "GREAT POWER: You cost 8 ass points to ally"
 
+ no_gift_tt:0 "Mods, kill this guy with hammers"
+
 
  B29_weakest_link:0 "Weakest link"
 
