--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -126,6 +126,7 @@
   cot_camir_desc:0 "Restore Camir's name"
   
   merc_comp_of_trym:0 "The Company of Trym"
+  merc_sang_knights:0 "§RSanguine Knights§!\n"
 
   wos_recruit_planetouched_general_title:0 "Recruit Plaintouched General"
   wos_recruit_planetouched_general_desc:0 "Can only be taken once every twenty years"
