Colonial ideas, Gawed T1 loc

--- a/localisation/CoT_gov_reforms_l_english.yml
+++ b/localisation/CoT_gov_reforms_l_english.yml
@@ -24,3 +24,6 @@
 
  cot_A01_lencori_war_nobility:0 "Lencori War Nobility"
  cot_A01_lencori_war_nobility_desc:0 "War Nobility ftw"
+
+ gawed_eagle_restored_reform:0 "Eagle Restored"
+ gawed_eagle_restored_reform_desc:0 "The Gawedi Eagle has been restored. None shall question our authority ever again."
