--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -5688,6 +5688,43 @@
  Z54_idea_7_3:0 "Deepwoods wood manufactories"
  Z54_idea_7_3_desc:0 "Karakhanbar 7 desc"
 
+ W42_ideas_2:0 "Meradzor Ideas 2"
+ W42_ideas_2_start:0 "Meradzor Traditions 2"
+ W42_ideas_2_bonus:0 "Meradzor Ambition 2"
+ W42_idea_1_2:0 "Local Designs"
+ W42_idea_1_2_desc:0 "Meradzor 1 desc"
+ W42_idea_2_2:0 "Orcish Nation-Building"
+ W42_idea_2_2_desc:0 "Meradzor 2 desc"
+ W42_idea_3_2:0 "Orcish Sentiment"
+ W42_idea_3_2_desc:0 "Meradzor 3 desc"
+ W42_idea_4_2:0 "The Endless Greentide"
+ W42_idea_4_2_desc:0 "Meradzor 4 desc"
+ W42_idea_5_2:0 "Marrhold's Corpse"
+ W42_idea_5_2_desc:0 "Meradzor 5 desc"
+ W42_idea_6_2:0 "Vice Grip Administration"
+ W42_idea_6_2_desc:0 "Meradzor 6 desc"
+ W42_idea_7_2:0 "Heartsworn"
+ W42_idea_7_2_desc:0 "Meradzor 7 desc"
+
+ W42_ideas_3:0 "Meradzor Ideas 3"
+ W42_ideas_3_start:0 "Meradzor Traditions 3"
+ W42_ideas_3_bonus:0 "Meradzor Ambition 3"
+ W42_idea_1_3:0 "Local Designs"
+ W42_idea_1_3_desc:0 "Meradzor 1 desc"
+ W42_idea_2_3:0 "Orcish Nation-Building"
+ W42_idea_2_3_desc:0 "Meradzor 2 desc"
+ W42_idea_3_3:0 "Orcish Sentiment"
+ W42_idea_3_3_desc:0 "Meradzor 3 desc"
+ W42_idea_4_3:0 "The Endless Greentide"
+ W42_idea_4_3_desc:0 "Meradzor 4 desc"
+ W42_idea_5_3:0 "Marrhold's Corpse"
+ W42_idea_5_3_desc:0 "Meradzor 5 desc"
+ W42_idea_6_3:0 "Vice Grip Administration"
+ W42_idea_6_3_desc:0 "Meradzor 6 desc"
+ W42_idea_7_3:0 "Heartsworn"
+ W42_idea_7_3_desc:0 "Meradzor 7 desc"
+
+
 ###########################################################
 ##################        Gerudian       ##################
 ###########################################################
@@ -6322,6 +6359,60 @@
  Z34_idea_7_3:0 "Black Reaver Academy"
  Z34_idea_7_3_desc:0 "Black Castanor 7 desc"
 
+ D01_ideas_1:0 "Gerudian colonial Ideas 1"
+ D01_ideas_1_start:0 "Gerudian colonial Traditions 1"
+ D01_ideas_1_bonus:0 "Gerudian colonial Ambition 1"
+ D01_idea_1_1:0 "A New North"
+ D01_idea_1_1_desc:0 "Gerudian colonial 1 desc"
+ D01_idea_2_1:0 "Freemen Fervour"
+ D01_idea_2_1_desc:0 "Gerudian colonial 2 desc"
+ D01_idea_3_1:0 "Hunters and Frontiersmen"
+ D01_idea_3_1_desc:0 "Gerudian colonial 3 desc"
+ D01_idea_4_1:0 "Tithes and Tributes"
+ D01_idea_4_1_desc:0 "Gerudian colonial 4 desc"
+ D01_idea_5_1:0 "Wealth Abound"
+ D01_idea_5_1_desc:0 "Gerudian colonial 5 desc"
+ D01_idea_6_1:0 "Merchantmen"
+ D01_idea_6_1_desc:0 "Gerudian colonial 6 desc"
+ D01_idea_7_1:0 "Frontier Skirmishers"
+ D01_idea_7_1_desc:0 "Gerudian colonial 7 desc"
+
+ D01_ideas_2:0 "Gerudian colonial Ideas 2"
+ D01_ideas_2_start:0 "Gerudian colonial Traditions 2"
+ D01_ideas_2_bonus:0 "Gerudian colonial Ambition 2"
+ D01_idea_1_2:0 "A New North"
+ D01_idea_1_2_desc:0 "Gerudian colonial 1 desc"
+ D01_idea_2_2:0 "Freemen Fervour"
+ D01_idea_2_2_desc:0 "Gerudian colonial 2 desc"
+ D01_idea_3_2:0 "Hunters and Frontiersmen"
+ D01_idea_3_2_desc:0 "Gerudian colonial 3 desc"
+ D01_idea_4_2:0 "Tithes and Tributes"
+ D01_idea_4_2_desc:0 "Gerudian colonial 4 desc"
+ D01_idea_5_2:0 "Wealth Abound"
+ D01_idea_5_2_desc:0 "Gerudian colonial 5 desc"
+ D01_idea_6_2:0 "Merchantmen"
+ D01_idea_6_2_desc:0 "Gerudian colonial 6 desc"
+ D01_idea_7_2:0 "Frontier Skirmishers"
+ D01_idea_7_2_desc:0 "Gerudian colonial 7 desc"
+
+ D01_ideas_3:0 "Gerudian colonial Ideas 3"
+ D01_ideas_3_start:0 "Gerudian colonial Traditions 3"
+ D01_ideas_3_bonus:0 "Gerudian colonial Ambition 3"
+ D01_idea_1_3:0 "A New North"
+ D01_idea_1_3_desc:0 "Gerudian colonial 1 desc"
+ D01_idea_2_3:0 "Freemen Fervour"
+ D01_idea_2_3_desc:0 "Gerudian colonial 2 desc"
+ D01_idea_3_3:0 "Hunters and Frontiersmen"
+ D01_idea_3_3_desc:0 "Gerudian colonial 3 desc"
+ D01_idea_4_3:0 "Tithes and Tributes"
+ D01_idea_4_3_desc:0 "Gerudian colonial 4 desc"
+ D01_idea_5_3:0 "Wealth Abound"
+ D01_idea_5_3_desc:0 "Gerudian colonial 5 desc"
+ D01_idea_6_3:0 "Merchantmen"
+ D01_idea_6_3_desc:0 "Gerudian colonial 6 desc"
+ D01_idea_7_3:0 "Frontier Skirmishers"
+ D01_idea_7_3_desc:0 "Gerudian colonial 7 desc"
+
  Z88_ideas_1:0 "Vaengheim Ideas 1"
  Z88_ideas_1_start:0 "Vaengheim Traditions 1"
  Z88_ideas_1_bonus:0 "Vaengheim Ambition 1"
@@ -6449,7 +6540,7 @@
  Z18_idea_7_2:0 "Mastering Shipcraft"
  Z18_idea_7_2_desc:0 "Frozenmaw 7 desc"
 
-Z18_ideas_3:0 "Frozenmaw Ideas 3"
+ Z18_ideas_3:0 "Frozenmaw Ideas 3"
  Z18_ideas_3_start:0 "Frozenmaw Traditions 1"
  Z18_ideas_3_bonus:0 "Frozenmaw Ambition 1"
  Z18_idea_1_3:0 "Tribute Warriors"
@@ -6468,7 +6559,7 @@ Z18_ideas_3:0 "Frozenmaw Ideas 3"
  Z18_idea_7_3_desc:0 "Frozenmaw 7 desc"
 
 
-Z19_ideas_2:0 "Broken Jaw Ideas 2"
+ Z19_ideas_2:0 "Broken Jaw Ideas 2"
  Z19_ideas_2_start:0 "Broken Jaw Traditions 1"
  Z19_ideas_2_bonus:0 "Broken Jaw Ambition 1"
  Z19_idea_1_2:0 "Remembering the Betrayal"
@@ -6486,7 +6577,7 @@ Z19_ideas_2:0 "Broken Jaw Ideas 2"
  Z19_idea_7_2:0 "Mastering Shipcraft"
  Z19_idea_7_2_desc:0 "Broken Jaw 7 desc"
 
-Z19_ideas_3:0 "Broken Jaw Ideas 3"
+ Z19_ideas_3:0 "Broken Jaw Ideas 3"
  Z19_ideas_3_start:0 "Broken Jaw Traditions 1"
  Z19_ideas_3_bonus:0 "Broken Jaw Ambition 1"
  Z19_idea_1_3:0 "Remembering the Betrayal"
@@ -6505,7 +6596,7 @@ Z19_ideas_3:0 "Broken Jaw Ideas 3"
  Z19_idea_7_3_desc:0 "Broken Jaw 7 desc"
 
 
-Z47_ideas_2:0 "Doombringer Ideas 2"
+ Z47_ideas_2:0 "Doombringer Ideas 2"
  Z47_ideas_2_start:0 "Doombringer Traditions 1"
  Z47_ideas_2_bonus:0 "Doombringer Ambition 1"
  Z47_idea_1_2:0 "Doom Shamans"
@@ -6523,7 +6614,7 @@ Z47_ideas_2:0 "Doombringer Ideas 2"
  Z47_idea_7_2:0 "Mastering Shipcraft"
  Z47_idea_7_2_desc:0 "Doombringer 7 desc"
 
-Z47_ideas_3:0 "Doombringer Ideas 3"
+ Z47_ideas_3:0 "Doombringer Ideas 3"
  Z47_ideas_3_start:0 "Doombringer Traditions 1"
  Z47_ideas_3_bonus:0 "Doombringer Ambition 1"
  Z47_idea_1_3:0 "Doom Shamans"
@@ -6541,7 +6632,7 @@ Z47_ideas_3:0 "Doombringer Ideas 3"
  Z47_idea_7_3:0 "Mastering Shipcraft"
  Z47_idea_7_3_desc:0 "Doombringer 7 desc"
 
-Z50_ideas_3:0 "Grombar Ideas 3"
+ Z50_ideas_3:0 "Grombar Ideas 3"
  Z50_ideas_3_start:0 "Grombar Traditions 1"
  Z50_ideas_3_bonus:0 "Grombar Ambition 1"
  Z50_idea_1_3:0 "Lessons of the Graytide"
@@ -6559,7 +6650,7 @@ Z50_ideas_3:0 "Grombar Ideas 3"
  Z50_idea_7_3:0 "Mastering Shipcraft"
  Z50_idea_7_3_desc:0 "Grombar 7 desc"
 
-Z50_ideas_3h:0 "Grombar Ideas 3"
+ Z50_ideas_3h:0 "Grombar Ideas 3"
  Z50_ideas_3h_start:0 "Grombar Traditions 1"
  Z50_ideas_3h_bonus:0 "Grombar Ambition 1"
  Z50_idea_1_3h:0 "Lessons of the Graytide"
@@ -6775,7 +6866,7 @@ Z50_ideas_3h:0 "Grombar Ideas 3"
  A60_idea_7_3:0 "Mixed Blood"
  A60_idea_7_3_desc:0 "Asheniande 7 desc"
 
-B20_ideas_2:0 "Iron Scepter Ideas 2"
+ B20_ideas_2:0 "Iron Scepter Ideas 2"
  B20_ideas_2_start:0 "Iron Scepter Ideas Traditions 1"
  B20_ideas_2_bonus:0 "Iron Scepter Ideas Ambition 1"
  B20_idea_1_2:0 "Folk of Aldresia"
@@ -6793,7 +6884,7 @@ B20_ideas_2:0 "Iron Scepter Ideas 2"
  B20_idea_7_2:0 "Mixed Blood"
  B20_idea_7_2_desc:0 "Iron Scepter Ideas 7 desc"
 
-B20_ideas_3:0 "Iron Scepter Ideas 3"
+ B20_ideas_3:0 "Iron Scepter Ideas 3"
  B20_ideas_3_start:0 "Iron Scepter Ideas Traditions 1"
  B20_ideas_3_bonus:0 "Iron Scepter Ideas Ambition 1"
  B20_idea_1_3:0 "Folk of Aldresia"
@@ -6811,7 +6902,7 @@ B20_ideas_3:0 "Iron Scepter Ideas 3"
  B20_idea_7_3:0 "Mixed Blood"
  B20_idea_7_3_desc:0 "Iron Scepter Ideas 7 desc"
 
-B20_ideas_1:0 "Iron Scepter Ideas 1"
+ B20_ideas_1:0 "Iron Scepter Ideas 1"
  B20_ideas_1_start:0 "Iron Scepter Ideas Traditions 1"
  B20_ideas_1_bonus:0 "Iron Scepter Ideas Ambition 1"
  B20_idea_1_1:0 "Folk of Aldresia"
@@ -7206,6 +7297,60 @@ B20_ideas_1:0 "Iron Scepter Ideas 1"
  A47_idea_6_3_desc:0 "Eborthil 6 desc"
  A47_idea_7_3:0 "Akasiki Auxillia"
  A47_idea_7_3_desc:0 "Eborthil 7 desc"
+
+ D02_ideas_1:0 "Businori Colonial Ideas 1"
+ D02_ideas_1_start:0 "Businori Colonial Traditions 1"
+ D02_ideas_1_bonus:0 "Businori Colonial Ambition 1"
+ D02_idea_1_1:0 "Want for the World"
+ D02_idea_1_1_desc:0 "Businori Colonial 1 desc"
+ D02_idea_2_1:0 "Kheteratan Past"
+ D02_idea_2_1_desc:0 "Businori Colonial 2 desc"
+ D02_idea_3_1:0 "Finding Avenues of Trade"
+ D02_idea_3_1_desc:0 "Businori Colonial 3 desc"
+ D02_idea_4_1:0 "Cannorian Borders"
+ D02_idea_4_1_desc:0 "Businori Colonial 4 desc"
+ D02_idea_5_1:0 "Ardent Defenders"
+ D02_idea_5_1_desc:0 "Businori Colonial 5 desc"
+ D02_idea_6_1:0 "Businori Future"
+ D02_idea_6_1_desc:0 "Businori Colonial 6 desc"
+ D02_idea_7_1:0 "A Lay of the Land"
+ D02_idea_7_1_desc:0 "Businori Colonial 7 desc"
+
+ D02_ideas_2:0 "Businori Colonial Ideas 2"
+ D02_ideas_2_start:0 "Businori Colonial Traditions 2"
+ D02_ideas_2_bonus:0 "Businori Colonial Ambition 2"
+ D02_idea_1_2:0 "Want for the World"
+ D02_idea_1_2_desc:0 "Businori Colonial 1 desc"
+ D02_idea_2_2:0 "Kheteratan Past"
+ D02_idea_2_2_desc:0 "Businori Colonial 2 desc"
+ D02_idea_3_2:0 "Finding Avenues of Trade"
+ D02_idea_3_2_desc:0 "Businori Colonial 3 desc"
+ D02_idea_4_2:0 "Cannorian Borders"
+ D02_idea_4_2_desc:0 "Businori Colonial 4 desc"
+ D02_idea_5_2:0 "Ardent Defenders"
+ D02_idea_5_2_desc:0 "Businori Colonial 5 desc"
+ D02_idea_6_2:0 "Businori Future"
+ D02_idea_6_2_desc:0 "Businori Colonial 6 desc"
+ D02_idea_7_2:0 "A Lay of the Land"
+ D02_idea_7_2_desc:0 "Businori Colonial 7 desc"
+
+ D02_ideas_3:0 "Businori Colonial Ideas 3"
+ D02_ideas_3_start:0 "Businori Colonial Traditions 3"
+ D02_ideas_3_bonus:0 "Businori Colonial Ambition 3"
+ D02_idea_1_3:0 "Want for the World"
+ D02_idea_1_3_desc:0 "Businori Colonial 1 desc"
+ D02_idea_2_3:0 "Kheteratan Past"
+ D02_idea_2_3_desc:0 "Businori Colonial 2 desc"
+ D02_idea_3_3:0 "Finding Avenues of Trade"
+ D02_idea_3_3_desc:0 "Businori Colonial 3 desc"
+ D02_idea_4_3:0 "Cannorian Borders"
+ D02_idea_4_3_desc:0 "Businori Colonial 4 desc"
+ D02_idea_5_3:0 "Ardent Defenders"
+ D02_idea_5_3_desc:0 "Businori Colonial 5 desc"
+ D02_idea_6_3:0 "Businori Future"
+ D02_idea_6_3_desc:0 "Businori Colonial 6 desc"
+ D02_idea_7_3:0 "A Lay of the Land"
+ D02_idea_7_3_desc:0 "Businori Colonial 7 desc"
 
  U16_ideas_1:0 "Ourdia Ideas 1"
  U16_ideas_1_start:0 "Ourdia Traditions 1"
