--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -175,3 +175,5 @@
   human_busilar_decision_desc:0 "Busilar has a player"
   lorent_won_without_me_decision_title:0 "Click me if the humans won before you joined"
   lorent_won_without_me_decision_desc:0 "Removes the mana you get when you win. With great power comes great responsibility"
+  yonko_educate_masses:0 "Educate the Masses"
+  yonko_repopulate_countryside:0 "Repopulate the Countryside"
