--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -172,3 +172,5 @@ l_english:
  cot_A01_claires_failure:0 "'Claires' Failure"
  wos_a13_gawedi_hydrocentralism:0 "Gawedi Hyrdocenralism"
  wos_a13_cathrines_thaw:0 "Cathrine's Thaw"
+ wos_h76_only_bank:0 "The Only Bank Around Here is Me!"
+ wos_h76_allied_auxillia:0 "Allied Auxillia"
