--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -175,3 +175,4 @@ l_english:
  wos_h76_only_bank:0 "The Only Bank Around Here is Me!"
  wos_h76_allied_auxillia:0 "Allied Auxillia"
  wos_z07_umbral_king:0 "Umbral king"
+ wos_a05_lothanic_weave = "Lothanic Weave"
