--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -176,3 +176,8 @@ l_english:
  wos_h76_allied_auxillia:0 "Allied Auxillia"
  wos_z07_umbral_king:0 "Umbral king"
  wos_a05_lothanic_weave = "Lothanic Weave"
+ wos_z22_ice_forges_again_80:0 "Restored Ice Forge"
+ wos_z22_ice_forges_again_90:0 "Restored Ice Forge"
+ wos_z22_ice_forges_again_100:0 "Restored Ice Forge"
+ wos_z22_ice_forges_again_110:0 "Restored Ice Forge"
+ wos_z22_ice_forges_again_120:0 "Restored Ice Forge"
