--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -97,6 +97,8 @@
 
  no_gift_tt:0 "Mods, kill this guy with hammers"
 
+ IC_swap_title: "Change diety"
+ IC_swap_desc: "Change your infernal court diety. Can be done every 10 years."
 
  B29_weakest_link:0 "Weakest link"
 
