made weekly file and buffed non-cannorians

--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -179,3 +179,4 @@
   lorent_won_without_me_decision_desc:0 "Removes the mana you get when you win. With great power comes great responsibility"
   yonko_educate_masses:0 "Educate the Masses"
   yonko_repopulate_countryside:0 "Repopulate the Countryside"
+  wos_no_tiered_ideas:0 "condolences for the subpar ideas"
